--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.52.1",
     "typescript": "4.0.3",
     "web-vitals": "^0.2.4"
   },
