--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naughts-and-crosses",
+  "name": "noughts-and-crosses",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
